<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_dialer"
        android:icon="@drawable/ic_dialer"
        android:title="@string/tab_dialer" />
    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/tab_contacts" />
    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/tab_favorites" />
    <item
        android:id="@+id/menu_recents"
        android:icon="@drawable/ic_recent"
        android:title="@string/tab_recents" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu> 